fixes hero section overflow issue and adds footer

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ p {
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
-    height: auto;
+    height: 70px;
     width: 100%;
 }
 
@@ -116,11 +116,12 @@ p {
 
 .navbar-links a:hover {
     border-bottom: 1px solid #28a745;
+    transform: scale(1.1);
 }
 
 .navbar-links a:active {
     border-bottom: 2px solid #31c654;
-    transform: scale(1.1);
+    
 }
 
 /* Hamburger Menu */
@@ -146,9 +147,10 @@ p {
 /* Hero Styles */
 
 .hero {
-    height: 100vh;
+    min-height: 100vh;
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('../img/background.jpg') no-repeat center center/cover;
     color: #fff;
+    position: relative;
 }
 
 .hero-content {
@@ -158,97 +160,44 @@ p {
     align-items: center;
     height: 100%;
     text-align: center;
-    margin: 0 20px;
+    margin: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .hero-title {
-    font-size: clamp(3rem, 10vw, 7rem); /* Adjust the values as needed */
+    font-size: clamp(3rem, 10vw, 7rem);
 }
 
 .hero-subtitle {
     margin: 20px 0;
-    font-size: clamp(1.5rem, 3vh, 5rem);
+    font-size: clamp(2rem, 4vw, 4.5rem);
 }
 
-/* About */
-
-#about {
-    text-align: center;
-    margin: 30px 0 15px;
+#footer {
     display: flex;
-    flex-direction: column;
-}
-
-#about .about-title {
-    margin-top: 50px;
-}
-
-#about h2 {
-    font-size: clamp(3rem, 5vh, 5rem);
-    margin-bottom: 30px;
-}
-
-#about .about-content {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin: auto;
-    max-width: 1180px;
-
-}
-
-#about .about-content .about-profile-pic img {
-    width: 100%;
-}
-
-#about .about-content .about-profile-content {
-    margin: 0 20px;
-    text-align: left;
-}
-
-#about .about-content .about-profile-content p {
-    margin-bottom: 20px;
+    justify-content: space-between;
+    align-items: center;
     font-size: 2rem;
+    font-weight: bold;
+    padding: 0 20px;
+    background-color: #28a745;
+    color: #fff;
+    height: auto;
 }
 
-@media (max-width: 500px) {
-    .toggle-button {
-        display: flex;
-    }
-    
-    .navbar {
-        flex-direction: column;
-        background-color: rgba(0, 0, 0, 0.5);
-        padding: 0;
-    }
+#footer .footer-icons i {
+    color: #fff;
+    margin: 20px;
+}
 
-    .navbar-links {
-        display: none;
-    }
+#footer .footer-icons i:hover {
+    transform: scale(1.2);
+    cursor: pointer;
+}
 
-    .navbar-links ul {
-        align-items: center;
-        flex-direction: column;
-        width: 100%;
-    }
-
-    .navbar-links a {
-        padding: 0.5rem 1rem;
-    }
-
-    .navbar-links a:hover {
-        border: none;
-        width: 100%;
-    }
-
-    .navbar-links li:hover {
-        background-color: #444;
-        width: 100%;
-        text-align: center;
-    }
-
-    .navbar-links.active {
-        display: flex;
-    }
-
+#footer .footer-icons i:active {
+    opacity: 0.8;
 }
